# trans-epub

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: client.rs  epub.rs  main.rs  translate.rs
src/client/: gemini.rs  open_ai.rs
src/translate/: gemini.rs  open_ai.rs  translator.rs
