[package]
name = "trans-epub"
version = "0.0.17"
edition = "2024"
description = "Translate EPUB with CLI"
repository = "https://github.com/tomiyan/trans-epub"
homepage = "https://github.com/tomiyan/trans-epub"
documentation = "https://github.com/tomiyan/trans-epub"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"]}
zip = "2.2.3"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = "0.38.0"
tokio = { version = "1.36.0", features = ["full"]}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.3"
env_logger = "0.11.8"
log = "0.4.27"
futures = "0.3.31"
