[package]
name = "trans-epub"
version = "0.0.22"
edition = "2024"
description = "Translate EPUB with CLI"
repository = "https://github.com/tomiyan/trans-epub"
homepage = "https://github.com/tomiyan/trans-epub"
documentation = "https://github.com/tomiyan/trans-epub"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.43", features = ["derive", "env"]}
zip = "6.0.0"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
quick-xml = "0.38.3"
tokio = { version = "1.47.1", features = ["full"]}
serde = { version = "1.0.223", features = ["derive"] }
serde_json = "1.0.142"
regex = "1.11.2"
env_logger = "0.11.8"
log = "0.4.29"
futures = "0.3.31"
